# SignalFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TERMS.md  llms-full.txt  llms.txt  package.json  pyproject.toml  requirements.txt  robots.txt  vercel.json
.github/workflows/: ci.yml
docs/: DISCOVERABILITY.md  HOSTED_PRIVACY_MODEL.md  INTEGRATIONS.md  PRODUCT_GRADE_OPEN_SOURCE.md  SAAS_LIMITS_AND_ABUSE_PREVENTION.md  SECURE_SECRETS_ARCHITECTURE.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json
frontend/app/: error.js  globals.css  layout.js  loading.js  not-found.js  page.js  page.module.css  state.module.css
frontend/components/: ChannelsConnector.js  ContentLibrary.js  ContentPackageCreationFlow.js  Dashboard.js  Icons.js  LandingPage.js  PlatformPreviews.js  ProjectManager.js  SettingsManager.js  Sidebar.js
frontend/hooks/: useRecorder.js
frontend/lib/: config.js  hostedMode.js  storageService.js
frontend/pages/: generate.js  index.js
frontend/public/: llms.txt  robots.txt  schema.jsonld
go_transport/: go.mod  main.go
proto/: signalflow.proto
rust_media_compositor/: Cargo.toml
rust_media_compositor/src/: lib.rs
signalflow/: __init__.py  cli.py  context_engine.py  launchkit.py  native.py  orchestrator.py  utils.py
signalflow/compositor/: __init__.py  (+3 more)
tests/: test_image_renderer.py  test_launchkit.py  test_native_shim.py  test_presentation.py  test_snr.py
(+63 files in other folders)
