[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalflow"
version = "0.1.0"
description = "SignalFlow - safe context ingestion and media compositor (prototype)"
authors = [ { name = "SignalFlow Team" } ]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
